docs: spacing fix changelog and added favicon

--- a/docs-components/Changelog/Changelog.module.css
+++ b/docs-components/Changelog/Changelog.module.css
@@ -5,7 +5,7 @@
 .changelog h1,
 .changelog h2 {
     border-bottom: 1px solid #e0e0e0;
-    padding-top: 16px;
+    margin-top: 32px;
     padding-bottom: 10px;
     margin-bottom: 24px;
 }
